Use border rather than fixed size for the upper header to guarantee proper vertical alignment.  Resised blue gradient a little. Should be turned into a CSS gradient.

--- a/css/swipl.css
+++ b/css/swipl.css
@@ -19,14 +19,10 @@ body {
     background-image: url("/icons/bluegrad.png");
     background-repeat: repeat-x;
     color:  #FFF;
-    height: 38px;
+    border: 5px;
 }
 
 #upper-header form {
-    display: inline;
-}
-
-#upper-header form div {
     display: inline;
 }
 
